# audio-analysis-agents

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml
config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
docs/: DESIGN.md  LLMRouter.md  LLMRouterLangGraph.md  LLMRouterLiteLLM.md  agents.md  api.md  architecture.md  routing.md
docs/plans/: 2026-01-16-auth-and-opik-design.md  2026-01-16-jwt-auth-implementation.md  2026-01-16-llm-tool-integration-design.md  2026-01-16-railway-deployment.md  2026-01-19-router-refactor-design.md  2026-01-19-router-refactor-implementation.md  2026-02-17-sketchbook-api-design.md  2026-02-17-sketchbook-api-implementation.md
evals/: generate_synthetic.py  manifest.json  run_evals.py
example_frontend/: app.js  index.html  style.css
examples/: 01_gemini_basics.py  02_audio_tool_calling.py
src/: __init__.py
src/agents/: __init__.py  base.py  registry.py  rhythm.py  spectral.py  temporal.py
src/api/: __init__.py  apps.py  auth.py  auth_views.py  consumers.py  middleware.py  models.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_track.py
src/observability/: __init__.py  tracing.py
src/orchestrator/: __init__.py  base.py  events.py  llm_routing.py  llm_routing_langgraph.py  llm_routing_litellm.py  orchestrator.py  providers.py
src/sketchbook/: apps.py  descriptors.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/sketchbook/migrations/: 0001_initial.py
src/tasks/: __init__.py  analysis.py  celery.py  notifications.py
src/tools/: __init__.py  features.py  loader.py
static/js/: app.js  config.js
templates/: index.html
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_orchestrator.py
tests/test_agents/: test_agent_descriptions.py  test_base.py  test_registry.py  test_rhythm_dimensions.py
tests/test_api/: test_consumers.py  test_models.py  test_views.py
tests/test_integration/: __init__.py  test_router_integration.py
tests/test_orchestrator/: __init__.py  test_base_router.py  test_events.py  test_llm_routing_litellm.py  test_providers.py
tests/test_sketchbook/: test_descriptors.py  test_integration.py  test_models.py  test_serializers.py  test_tasks.py  test_views.py
tests/test_tools/: test_loader.py
