[project]
name = "audio-analysis-agents"
version = "0.1.0"
description = "Modular audio analysis system with orchestrated agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
llm = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "opik>=1.0.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "python-dotenv>=1.0.0",
    "opik>=1.0.0",
]
litellm = [
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "opik>=1.0.0",
]
api = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.0.0",
    "channels>=4.0.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "litellm>=1.0.0",
    "whitenoise>=6.0.0",
    "dj-database-url>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "django-storages>=1.14.0",
    "boto3>=1.34.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "channels-redis>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
